minor changes IT IS FOR ARCHIVE NOW, all the graphs areincorporated in 72 MFPADs

--- a/contrast_map.ipynb
+++ b/contrast_map.ipynb
@@ -273,7 +273,7 @@
     "    cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "    cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
+    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/SCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
     "    # plt.show()"
    ]
   },
@@ -313,7 +313,7 @@
     "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -348,7 +348,7 @@
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/total_MFPAD_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -373,7 +373,7 @@
     "cbar.ax.set_ylabel(\"% of assymetry\")\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/contrastmap_R-S_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/contrastmap_R-S_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
