--- a/contrast_map_COPY.ipynb
+++ b/contrast_map_COPY.ipynb
@@ -20,8 +20,11 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
     "%matplotlib inline\n",
+    "%config InlineBackend.figure_formats=[\"png\"]\n",
     "\n",
     "import re\n",
+    "from importlib import reload\n",
+    "#syntax: fugi = reload(fugi)\n",
     "\n",
     "import mplhep as hep\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -41,28 +44,28 @@
     "#to see which classes have been defined so far\n",
     "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
-    "##550eV - 11.5eV CH9\n",
-    "# # update nov Kilian binning (36,18)\n",
-    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CR_Knov.root\");en=\"550eV\";CH=\"CH9\";\n",
-    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
-    "# fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CR_Knov.root\")\n",
-    "# fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
+    "# ##550eV - 11.5eV CH9\n",
+    "# #update nov Kilian binning (36,18)\n",
+    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CR_Knov.root\");en=\"550eV\";CH=\"CH9\";\n",
+    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
+    "fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CR_Knov.root\")\n",
+    "fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
     "\n",
     "# #546eV - 8.2eV CH9\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_9600-3700ns_multiCH9.root\");en=\"546eV\";CH=\"CH9\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
-    "#544eV - 6.1eV CH9\n",
+    "# # 544eV - 6.1eV CH9\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CR_9600-3700ns_multiCH9.root\");en=\"544eV\";CH=\"CH9\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
-    "#542eV - 4eV CH9\n",
+    "# # 542eV - 4eV CH9\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CR_9600-3700ns_COMBI_multiCH9.root\");en=\"542eV\";CH=\"CH9\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CL_9600-3700ns_COMBI_multiCH9.root\")\n",
     "\n",
     "#541eV 3eV CH9\n",
-    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_9600-3700ns_multiCH9.root\");en=\"541eV\";CH=\"CH9\";\n",
-    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_9600-3700ns_multiCH9.root\")\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_9600-3700ns_multiCH9.root\");en=\"541eV\";CH=\"CH9\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
     "#Select between CH9 and CH11\n",
     "path = \"angular_distr_el/\"+CH+\"/\"\n",
@@ -202,18 +205,22 @@
    "outputs": [],
    "source": [
     "if fileSCL and fileSCR is not None:\n",
-    "    fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
-    "    aspect=(phiM.max()/cosM.max())\n",
-    "    # cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCL.T, cmap=cmap_temp, levels=15)\n",
-    "    cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistSCL.T,shading='gouraud', cmap=cmap_temp)\n",
     "\n",
+    "    fugi = reload(fugi)\n",
+    "    fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
+    "    # cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCL.T, cmap=cmap_temp, levels=15)\n",
+    "    # cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistSCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    cs1,ax1=fugi.plot_interpolation(phiM,cosM,r_norm_nhistSCL.T, ax=ax1, cmap=cmap_temp, xstep=1, ystep=0.005)\n",
+    "\n",
+    "    aspect=(phiM.max()/cosM.max())    \n",
     "    ax1.set_title(\"MFPAD SCL \"+CH+\"_\"+en)\n",
     "    ax1.set_xlabel('phi [DEG]')\n",
     "    ax1.set_ylabel('cos(theta) [adm]')\n",
     "    ax1.set_aspect(aspect)\n",
-    "    cbar1=fig.colorbar(cs1, shrink=0.9, ax=ax1)\n",
-    "    cbar1.set_ticks([r_norm_nhistSCR.min(),r_norm_nhistSCR.max()])\n",
-    "    cbar1.set_ticklabels([\"min\",\"max\"])    \n",
+    "    cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "    cbar1.set_ticks([r_norm_nhistSCL.min(),r_norm_nhistSCL.max()])\n",
+    "    cbar1.set_ticklabels([\"min\",\"max\"])\n",
+    "    \n",
     "    \n",
     "    cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL_flip.T,cmap=cmap_temp,levels=15)\n",
     "    # cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistSCL_flip.T,shading='gouraud', cmap=cmap_temp)\n",
@@ -227,7 +234,7 @@
     "    cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "    cbar2.ax.set_ylabel('normalised counts')\n",
     "    \n",
-    "    plt.show()"
+    "    # plt.show()"
    ]
   },
   {
@@ -240,7 +247,9 @@
     "    fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
     "    aspect=(phiM.max()/cosM.max())\n",
     "    # cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR.T, cmap=cmap_temp, levels=15)\n",
-    "    cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistSCR.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    # cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistSCR.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    cs1,ax1=fugi.plot_interpolation(phiM,cosM,r_norm_nhistSCR.T, ax=ax1, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "\n",
     "    ax1.set_title(\"MFPAD SCR n0 \"+CH+\"_\"+en)\n",
     "    ax1.set_xlabel('phi [DEG]')\n",
@@ -251,7 +260,9 @@
     "    cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
     "    # cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL.T,cmap=cmap_temp,levels=15)\n",
-    "    cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistSCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    # cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistSCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "    cs2,ax2=fugi.plot_interpolation(phiM,cosM,r_norm_nhistSCL.T, ax=ax2, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "\n",
     "    ax2.set_title(\"MFPAD SCL n0 \"+CH+\"_\"+en)\n",
     "    ax2.set_xlabel('phi [DEG]')\n",
@@ -262,8 +273,8 @@
     "    cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "    cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
-    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
-    "    plt.show()"
+    "    # fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/SCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
+    "    # plt.show()"
    ]
   },
   {
@@ -276,7 +287,9 @@
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
     "# cs1=ax1.contourf(phiM,cosM,r_norm_nhistRCR.T, cmap=cmap_temp, levels=15)\n",
-    "cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistRCR.T,shading='gouraud', cmap=cmap_temp)\n",
+    "# cs1=ax1.pcolormesh(phiM,cosM,r_norm_nhistRCR.T,shading='gouraud', cmap=cmap_temp)\n",
+    "cs1,ax1=fugi.plot_interpolation(phiM,cosM,r_norm_nhistRCR.T, ax=ax1, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "\n",
     "ax1.set_title(\"MFPAD RCR n0 \"+CH+\"_\"+en)\n",
     "ax1.set_xlabel('phi [DEG]')\n",
@@ -287,7 +300,9 @@
     "cbar1.set_ticklabels([\"min\",\"max\"])\n",
     "\n",
     "# cs2=ax2.contourf(phiM,cosM,r_norm_nhistRCL.T,cmap=cmap_temp,levels=15)\n",
-    "cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistRCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "# cs2=ax2.pcolormesh(phiM,cosM,r_norm_nhistRCL.T,shading='gouraud', cmap=cmap_temp)\n",
+    "cs2,ax2=fugi.plot_interpolation(phiM,cosM,r_norm_nhistRCL.T, ax=ax2, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "\n",
     "ax2.set_title(\"MFPAD RCL n0 \"+CH+\"_\"+en)\n",
     "ax2.set_xlabel('phi [DEG]')\n",
@@ -298,7 +313,7 @@
     "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -319,7 +334,9 @@
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "# cs=ax.contourf(phiM,cosM,totMFPAD.T, cmap=cmap_temp, levels=20)\n",
-    "cs=ax.pcolormesh(phiM,cosM,totMFPAD.T,shading='gouraud', cmap=cmap_temp)\n",
+    "# cs=ax.pcolormesh(phiM,cosM,totMFPAD.T,shading='gouraud', cmap=cmap_temp)\n",
+    "cs,ax=fugi.plot_interpolation(phiM,cosM,totMFPAD.T, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "ax.set_title(\"MFPAD tot \"+CH+\"_\"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
@@ -331,7 +348,7 @@
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/total_MFPAD_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -341,8 +358,10 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "# cs=ax.contourf(phiM,cosM,mPECD_norm.T, cmap=cmap_temp)#, levels=24)\n",
-    "cs=ax.pcolormesh(phiM,cosM,mPECD_norm.T*100,shading='gouraud', vmin=-8.5, vmax=8.5, cmap=cmap_temp)\n",
+    "# cs=ax.contourf(phiM,cosM,mPECD_norm.T*100, cmap=cmap_temp)#, levels=24)\n",
+    "# cs=ax.pcolormesh(phiM,cosM,mPECD_norm.T*100,shading='gouraud', vmin=-8.5, vmax=8.5, cmap=cmap_temp)\n",
+    "cs,ax=fugi.plot_interpolation(phiM,cosM,mPECD_norm.T*100, ax=ax, cmap=cmap_temp, xstep=1, ystep=0.01)\n",
+    "\n",
     "ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
@@ -354,7 +373,7 @@
     "cbar.ax.set_ylabel(\"% of assymetry\")\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "# fig.sakvefig(\"../PYTHON_graphs/OUTPUTS/contrastmap_R-S_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/contrastmap_R-S_\"+CH+\"_\"+en+\"_exp.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -367,7 +386,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.8.10 64-bit ('base': conda)",
    "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
   },
   "language_info": {
@@ -380,7 +399,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   }
   }
  },
  "nbformat": 4,
