inline png reduced fix appearance of the labels/axis

--- a/N2_calibration.ipynb
+++ b/N2_calibration.ipynb
@@ -12,7 +12,10 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
+    "\n",
     "%matplotlib inline\n",
+    "%config InlineBackend.figure_formats=[\"png\"]\n",
+    "\n",
     "import mplhep as hep\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
@@ -89,15 +92,16 @@
     "    return a*np.exp(-(x-x0)**2/(2*sigma**2))\n",
     "\n",
     "popt,pcov = curve_fit(gaus_fit,en_masked,KER_masked,p0=[max(KER_masked), mean, sigma])\n",
-    "fit_info = \"Gaussian fit \\n\\u00B5 = %.2f \\nstd = %.2f\" % (mean, sigma)\n",
+    "fit_info = \"\\u00B5 = %.2f eV \\n$\\u03c3_{std}$ = %.2f\" % (mean, sigma)\n",
     "# fit_info = (f\"Gauss fit: \\u00B5 = {mu:+.2f}, \\u00b2 std = {std:+.2f}\")\n",
     "\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "\n",
-    "ax.plot(en,KER, color=cmap_viridis(0))\n",
-    "ax.plot(en_masked,gaus_fit(en_masked,*popt), color=cmap_viridis(0.3), linewidth=5, alpha = 0.6)\n",
-    "ax.legend(title=fit_info, loc=\"best\")\n",
+    "ax.plot(en,KER, color=cmap_viridis(0), linewidth=3, alpha = 0.6,)\n",
+    "ax.plot(en_masked,gaus_fit(en_masked,*popt), color=cmap_viridis(0.3), ls=\"--\",linewidth=2, label=\"Gaussian fit\")\n",
+    "plt.plot([], [], ' ', label=fit_info)\n",
     "\n",
+    "ax.legend(loc=\"best\",fontsize=\"medium\")\n",
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
@@ -206,7 +210,7 @@
     "\n",
     "cax = fig.add_axes([1.02, 0.20, 0.01, 0.58])\n",
     "cbar = fig.colorbar(cs3,shrink=0.9, cax=cax)\n",
-    "cbar.set_ticks([np.ma.masked_array(p_rel_xy.T,p_rel_xy.T<3).min(),p_rel_xz.max()])\n",
+    "cbar.set_ticks([np.ma.masked_array(p_rel_xy.T,p_rel_xy.T<3).min(),p_rel_xz.max()*1.03])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
@@ -256,7 +260,7 @@
     "\n",
     "cax = fig.add_axes([1.02, 0.20, 0.01, 0.58])\n",
     "cbar = fig.colorbar(cs3,shrink=0.9, cax=cax)\n",
-    "cbar.set_ticks([np.ma.masked_array(p12_z.T,p12_z.T<3).min(),p12_z.max()])\n",
+    "cbar.set_ticks([p12_z.T.min()+4,p12_z.max()])\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.ax.set_ylabel('normalized counts')\n",
     "\n",
@@ -295,8 +299,32 @@
     "Y = np.reshape(y, (48, 36))\n",
     "Z = np.reshape(z, (48, 36))\n",
     "\n",
-    "d_matrix = np.sqrt(X**2+Y**2+Z**2)\n",
+    "d_matrix = np.sqrt(X**2+Y**2+Z**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "fig1 = go.Figure(data=[go.Scatter3d(x=x, y=y, z=z, mode='markers',\n",
+    "                    marker=dict( size=5,color=d, colorscale=\"viridis\", opacity=1., showscale=True)\n",
+    "                    # color set colours to an array/list of desired values  \n",
+    "                    # show scale to show the legend according to the color\n",
+    "                    )])\n",
     "\n",
+    "# fig1.update_layout(title=\"TFMeOx MFPADs EXP\", width=500, height=500, margin=dict(l=65, r=50, b=65, t=90)) #margin=dict(l=0, r=0, b=0, t=0))\n",
+    "fig1.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig = plt.figure(figsize=(20,20))\n",
     "# fig, ax = plt.subplots(subplot_kw={\"projection\": \"3d\"})\n",
     "ax = fig.add_subplot(111, projection = \"3d\", )\n",
@@ -333,10 +361,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from scipy.spatial import ConvexHull\n",
     "\n",
