--- a/lens_strength.ipynb
+++ b/lens_strength.ipynb
@@ -11,7 +11,10 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
     "from matplotlib.lines import Line2D\n",
+    "\n",
     "%matplotlib inline\n",
+    "%config InlineBackend.figure_formats=[\"png\"]\n",
+    "\n",
     "import mplhep as hep\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
@@ -157,7 +160,7 @@
     "ax.axhline(y=0, color='black', linestyle='--', alpha=0.5)\n",
     "ax.set_xlabel('tof [ns]')\n",
     "ax.set_xlim([14.75, 17.4])\n",
-    "ax.set_ylabel('y axis [mm]')\n",
+    "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-40, 40.])\n",
     "ax.set_aspect(1/28)\n",
     "\n",
@@ -189,7 +192,7 @@
     "# ax.scatter(table.loc[second_2, \"TOF_200ps\"]*10**3, table.loc[second_2,\"Z\"], color= cmap_viridis(0), alpha=0.6)\n",
     "# ax.scatter(table.loc[second_3, \"TOF_200ps\"]*10**3, table.loc[second_3,\"Z\"], color= cmap_viridis(0), alpha=0.6)\n",
     "\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "# ax.set_xlim(-1.,1.)\n",
     "ax.set_ylabel('monetum magnitude [a.u.]')\n",
     "# fig.savefig(dir+\"lens_effect_cos(theta).svg\", dpi=144, transparent=False)\n",
@@ -215,7 +218,7 @@
     "ax.scatter(table.loc[fourth, \"cos(theta)_tof\"], table.loc[fourth,\"mom.mag\"], color= \"black\", s= 1, alpha=0.4)\n",
     "\n",
     "\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "# ax.set_xlim(-1.,1.)\n",
     "ax.set_xlim(-.99,.99)\n",
     "ax.set_ylabel('monetum magnitude [a.u.]')\n",
@@ -246,7 +249,7 @@
     "ax.scatter(table.loc[fourth, \"cos(theta)_tof\"], table.loc[fourth,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
     "\n",
     "\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "# ax.set_xlim(-1.,1.)\n",
     "ax.set_xlim(-.99,.99)\n",
     "ax.set_ylabel('kinetic energy [eV]')\n",
@@ -265,6 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# z=4 shift\n",
     "fig,ax= plt.subplots(1,figsize=(12, 10))\n",
     "# plt.suptitle(\"fish\")\n",
     "ax.scatter(table1.loc[first1, \"TOF_200ps\"]*10**3, table1.loc[first1,\"Z\"], color= cmap_viridis(0), alpha=0.6)\n",
@@ -280,7 +284,7 @@
     "ax.axhline(y=0, color='black', linestyle='--', alpha=0.5)\n",
     "ax.set_xlabel('tof [ns]')\n",
     "ax.set_xlim([14.75, 17.4])\n",
-    "ax.set_ylabel('y axis [mm]')\n",
+    "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-40, 40.])\n",
     "ax.set_aspect(1/28)\n",
     "\n",
@@ -298,6 +302,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#SIMION z=4 shift -> molecular beam TOF y direction \n",
+    "\n",
     "fig,ax= plt.subplots(1,figsize=(10, 10))\n",
     "# plt.suptitle(\"fish\")\n",
     "ax.scatter(table1.loc[first1, \"cos(theta)_tof.1\"], table1.loc[first1,\"KE_calc_rnd\"], color= cmap_viridis(0), alpha=0.6)\n",
@@ -312,7 +318,7 @@
     "ax.scatter(table1.loc[fourth1, \"cos(theta)_tof\"], table1.loc[fourth1,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
     "\n",
     "\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "# ax.set_xlim(-1.,1.)\n",
     "ax.set_xlim(-.99,.99)\n",
     "ax.set_ylabel('kinetic energy [eV]')\n",
@@ -333,6 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#SIMION y=4 shift -> spectrometer TOF z direction \n",
     "fig,ax= plt.subplots(1,figsize=(10, 10))\n",
     "# plt.suptitle(\"fish\")\n",
     "ax.scatter(table2.loc[first2, \"cos(theta)_tof.1\"], table2.loc[first2,\"KE_calc_rnd\"], color= cmap_viridis(0), alpha=0.6)\n",
@@ -346,7 +353,7 @@
     "ax.scatter(table2.loc[fourth2, \"cos(theta)_tof\"], table2.loc[fourth2,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
     "\n",
     "\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "# ax.set_xlim(-1.,1.)\n",
     "ax.set_xlim(-.99,.99)\n",
     "ax.set_ylabel('kinetic energy [eV]')\n",
@@ -385,6 +392,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   }
   }
  },
  "nbformat": 4,
