--- a/Ar_calibration.ipynb
+++ b/Ar_calibration.ipynb
@@ -12,7 +12,10 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
+    "\n",
     "%matplotlib inline\n",
+    "%config InlineBackend.figure_formats=[\"png\"]\n",
+    "\n",
     "import mplhep as hep\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
@@ -121,7 +124,7 @@
     "\n",
     "ax.set_xlabel('tof [ns]')\n",
     "ax.set_xlim([14.75, 17.4])\n",
-    "ax.set_ylabel('y axis [mm]')\n",
+    "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-40., 40.])\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "\n",
@@ -151,7 +154,7 @@
     "\n",
     "ax.set_xlabel('tof [ns]')\n",
     "ax.set_xlim([14.75, 17.4])\n",
-    "ax.set_ylabel('y axis [mm]')\n",
+    "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-40., 40.])\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "\n",
@@ -176,7 +179,7 @@
     "\n",
     "ax.set_xlabel('tof [ns]')\n",
     "ax.set_xlim([14.75, 17.4])\n",
-    "ax.set_ylabel('y axis [mm]')\n",
+    "ax.set_ylabel('y-axis [mm]')\n",
     "ax.set_ylim([-40., 40.])\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "\n",
@@ -205,7 +208,7 @@
     "\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
-    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
     "ax.set_ylabel('kinetc energy photoelectrons [eV]')\n",
     "ax.set_ylim([0., 15.])\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
@@ -216,6 +219,33 @@
     "\n",
     "fig.savefig(dir+\"ctheta_EE.png\", dpi=300, transparent=False)\n",
     "# fig.savefig(dir+\"ctheta_EE.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cthetaEE_proj=np.sum(cthetaEE,axis=0)\n",
+    "\n",
+    "cthetaEE_proj_masked = np.ma.masked_array(cthetaEE_proj, cthetaEE_proj < 10)\n",
+    "\n",
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "ax.set_xlabel('energy [eV]')\n",
+    "ax.set_ylabel('counts')\n",
+    "\n",
+    "ax.set_box_aspect(1)\n",
+    "\n",
+    "ax.plot(en,cthetaEE_proj_masked)\n",
+    "\n",
+    "ax.legend(loc=\"best\",fontsize=\"small\")\n",
+    "ax.grid()\n",
+    "\n",
+    "\n",
+    "plt.plot()\n",
+    "# fig.savefig(dir+\"el_sum_wlayer_proj.png\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -242,6 +272,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "0314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
+   }
   }
  },
  "nbformat": 4,
