new range t include -30

--- a/distance_optimization.ipynb
+++ b/distance_optimization.ipynb
@@ -64,6 +64,11 @@
     "fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CR_Knov.root\")\n",
     "fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CL_Knov.root\")\n",
     "\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CR_Knov.root\");en=\"550eV\";CH=\"CH9\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
+    "# fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CR_Knov.root\")\n",
+    "# fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
+    "\n",
     "#Select between CH9 and CH11\n",
     "path = \"angular_distr_el/\"+CH+\"/\"\n",
     "\n",
@@ -490,7 +495,7 @@
    "outputs": [],
    "source": [
     "#describe a set of alpha, beta, gamma angles to rotate the theoretical distribution (would be better to rotate before downsampling)\n",
-    "arr=np.arange(-30,30,4)\n",
+    "arr=np.arange(-30,34,4)\n",
     "#alpha, beta, gamma for 3D rotation\n",
     "abg=list(product(arr, arr, arr))\n",
     "\n",
@@ -508,13 +513,13 @@
    "outputs": [],
    "source": [
     "# rotate the theoretical distribution\n",
-    "#for 72 MFPADS the calculation can last for 6-10 minutes for (-30,30,5)\n",
+    "#for 72 MFPADS the calculation can last for 15 minutes for (-30,34,4)\n",
     "r_temp=[]\n",
     "n_temp=[]\n",
     "\n",
-    "# these ae now 72 x 1728 MFPAD (36,18)\n",
+    "# these ae now 72 x len(arr) MFPAD (each 36,18 = 648)\n",
     "for el in MFPAD_Sth_phi_red:\n",
-    "    r_temp.append(fugi.rot3d_MFPAD_dist(el,theta_rad,phi_rad,abg,phiMM,cosMM))\n",
+    "    r_temp.append(fugi.rot3d_MFPAD_dist(el,theta_rad,phi_rad,abg,phiMM,cosMM, convention=3))\n",
     "\n",
     "MFPAD_Sth_phi_rotated=np.array(r_temp).reshape(72,len(abg),-1)\n",
     "\n",
@@ -537,10 +542,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#the min should return the average of the MFPAD, not zero!\n",
     "print(MFPAD_Sth_phi_rotated_norm[50,MFPAD_check].min())\n",
@@ -604,7 +607,7 @@
     "d_min=d_norm.min()\n",
     "output=[]\n",
     "for el in d_tot:\n",
-    "    if el[3] <= d_min*1.0002:\n",
+    "    if el[3] <= d_min*1.00012:\n",
     "        output.append(el)\n",
     "print(\"For the collective 72 MFPADs\")\n",
     "sorted(output, key = lambda x:x[3])"
@@ -710,10 +713,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def get_the_slice(x,y,z, surfacecolor):\n",
     "    return go.Surface(x=x,\n",
@@ -743,16 +744,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.8.10 64-bit ('base': conda)",
    "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
   },
   "language_info": {
@@ -765,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "metadata": {
    "interpreter": {
